--- a/tests/css/gerer_domicile.css
+++ b/tests/css/gerer_domicile.css
@@ -14,14 +14,6 @@
   background-color: rgb(226,226,226);
 }
 
-#plan_maison
-{
-  width:1196px;
-  margin:auto;
-  display: flex;
-  justify-content: center;
-  border: 2px rgb(127,127,127) solid;
-}
 
 #capteurs
 {
@@ -39,9 +31,25 @@
   background-color: rgb(226,226,226);
 }
 
-#consigne:hover, #capteurs:hover
+#consigne:hover, #capteurs:hover, #ajout_piece:hover
 {
   box-shadow: 5px 5px 20px rgb(127,127,127) inset;
+}
+
+#ajout_piece
+{
+  font-size: 30px;
+  width:1196px;
+  height:100px;
+  margin:auto;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border:2px rgb(127,127,127) solid;
+  border-top: 0px;
+  background-color: rgb(226,226,226)
 }
 
 .titre
