--- a/tests/css/mes_capteurs_et_cameras.css
+++ b/tests/css/mes_capteurs_et_cameras.css
@@ -29,6 +29,26 @@
   background-color: rgb(226,226,226);
 }
 
+#ajouter_capteur
+{
+  width:598px;
+  height:100px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(226,226,226);
+}
+
+#supprimer_capteur
+{
+  width:598px;
+  height:100px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(0,128,209);
+}
+
 #mode_automatique
 {
   width:598px;
@@ -36,7 +56,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(226,226,226);
+  background-color: rgb(0,128,209);
 }
 
 #afficher_donnees
@@ -46,7 +66,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(0,128,209);
+  background-color: rgb(226,226,226);
 }
 
 
