--- a/tests/css/new_header.css
+++ b/tests/css/new_header.css
@@ -18,7 +18,7 @@ a
   color:black;
 }
 
-li
+.liste
 {
   list-style-type: none;
   border-bottom: 1px dotted black;
@@ -64,20 +64,22 @@ li
 
 #sous_menu
 {
-  background-color: rgb(226,226,226);
+  background-color: white;
   text-align: center;
 	position: absolute;
 	top:74px;
 	display: none;
+  z-index: 10;
 }
 
 #sous_profil
 {
-  background-color: rgb(226,226,226);
+  background-color: white;
 	position: absolute;
   text-align: center;
 	right: 0px;
 	display: none;
+  z-index: 10;
 }
 
 #menu:hover #sous_menu
@@ -104,32 +106,34 @@ li
 	display: block;
 }
 
-li:hover
+.liste:hover
 {
   border-radius: 10px;
 }
 
 
-.fleche_haut1 {
+.fleche_haut1
+{
     width: 0;
     height: 0;
     border-left: 20px solid transparent;
     border-right: 20px solid transparent;
 
-    border-bottom: 20px solid rgb(226,226,226);
+    border-bottom: 20px solid white;
     position: absolute;
     left:75px;
 		top:70px;
 		display: none;
 }
 
-.fleche_haut2 {
+.fleche_haut2
+{
     width: 0;
     height: 0;
     border-left: 20px solid transparent;
     border-right: 20px solid transparent;
 
-    border-bottom: 20px solid rgb(226,226,226);
+    border-bottom: 20px solid white;
     position: absolute;
     right:80px;
 		top:70px;
